# Projekte

Mandelbrot_OpenCL/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp
Springerproblem_Backtracking/: CMakeLists.txt  LICENSE  README.md  main.cpp
Vulkan_Graphics_Test_Volk/: .gitignore  CMakeLists.txt  README.md
Vulkan_Graphics_Test_Volk/shaders/: shader.frag  shader.vert
Vulkan_Graphics_Test_Volk/src/: main.cpp
